--- a/style.css
+++ b/style.css
@@ -161,3 +161,25 @@ h5, h4{
 .mostrar{
     display:block;
 }
+
+@media (max-width:460px) {
+
+    .container-fluid{
+        height: auto;
+    }
+    .grid{
+        height: auto;
+    }
+    .grid1{
+        grid-column:2/11 ;
+        grid-row:1/4 ;
+    }
+    .grid2{
+        grid-column: 2/11 ;
+        grid-row:9/13 ;
+    }
+    .grid3{
+        grid-column:1/12 ;
+        grid-row:4/9 ;
+    }
+}
